--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # URL
-API_URL=https://dev-api.tumakr.com/api
+API_URL=https://api.tumakr.com/api
 ASSET_URL=https://files.tumakr.com/dev
 LECTURE_URL=
 KAKAO_API_KEY=b6f2b2296ecc086ed971f712d602ef30
@@ -7,4 +7,5 @@ CLIENT_URL=https://tumakr.com
 GOOGLE_API_KEY=AIzaSyAnX6B3sNw-OG7TxZXtQxAoFT000z7kMDU
 
 ## Cookie
-COOKIE_PREFIX=tumakr_cookie
+COOKIE_PREFIX=tumakr_cookie_prod
+
