--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ API_URL=https://api.tumakr.com/api
 ASSET_URL=https://files.tumakr.com/dev
 LECTURE_URL=
 KAKAO_API_KEY=b6f2b2296ecc086ed971f712d602ef30
-CLIENT_URL=https://tumakr.com
+CLIENT_URL=https://travel-2-chi.vercel.app
 GOOGLE_API_KEY=AIzaSyAnX6B3sNw-OG7TxZXtQxAoFT000z7kMDU
 
 ## Cookie
